<resources>
    <string name="app_name">App1</string>

    <string name="hello_world">your total is 0!</string>
    <string name="action_settings">Settings</string>
    <string name="ref">this is a reference</string>
    <string name="key1">Add one</string>
    <string name="key2">Sub one</string>
    <string name="hint">Type a Command</string>

    <string name="aboutus">about us</string>

    <string name="hello">Geocoding Demo</string>

    <string name="searchText">Search what?</string>
    <string name="clearResults">Clear Results</string>
    <string name="noResults">No results!</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_blank">Blank</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment Rendong</string>

    <string-array name="title">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="description">
        <item>Delft</item>
        <item>Amsterdam</item>
        <item>Munich</item>
        <item>Berlin</item>
    </string-array>
    <string name="title_activity_blank3">Blank3</string>
    <string name="title_activity_swipe_tab">SwipeTab</string>
    <string name="title_activity_swipe2">Swipe2</string>
    <string name="title_activity_actionbb">Actionbb</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_draw2">Draw2</string>

</resources>
