<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:gravity="center"
        android:id="@+id/tvdisplay"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/key1"
        android:id="@+id/b_add"
        android:textStyle="bold" />

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/key2"
        android:id="@+id/b_sub"
        android:textStyle="bold" />


</LinearLayout>
