<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical" >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hello" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:ems="10"
            android:hint="@string/searchText"

            android:singleLine="true" >

            <requestFocus />
        </AutoCompleteTextView>

        <Button
            android:id="@+id/OKButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:text="@android:string/ok" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/parentMapLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80" >

    </FrameLayout>

    <Button
        android:id="@+id/clearResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clearResults" />


</LinearLayout>